Create proxybots with hostbot on user sign in
A few notes
	- The hostbot is on everyone's contact list because it is in a shared roster group for all users and thus receives their presence info.
	- The hostbot is using in-band registration to create the proxybot, but I'm not thrilled with the changes I had to make to ejabberd's mod_register.erl to get this to work, so I might use ejabberd_xmlrpc instead in the future. The changes to ejabberd.cfg in this commit are related to this hack.
	- This uses a mysql table to keep track of which pairs of users we already have a proxybot for. This feels kind of hacky, but it'll do for now.

--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -393,6 +393,10 @@
 %% ]
 %%}.
 
+%%
+%% Restrict who can register new accounts on behalf other users (requires patch to mod_register)
+%%
+{acl, registrar_components, {user, "host", "bot.localhost"}}.
 
 %%%.   ============
 %%%'   ACCESS RULES
@@ -439,8 +443,11 @@
 %% To disable in-band registration, replace 'allow' with 'deny'.
 {access, register, [{allow, all}]}.
 
-%% Only admins can register new accounts (requires patch to mod_register)
-{access, register_from, [{allow, admin}, {deny, all}]}.
+%%
+%% Restrict who can register new accounts on behalf other users (requires patch to mod_register)
+%%
+{access, is_component, [{allow, registrar_components}, {deny, all}]}.
+{access, is_registrar, [{allow, admin}, {allow, registrar_components}, {deny, all}]}.
 
 %% By default the frequency of account registrations from the same IP
 %% is limited to 1 account every 10 minutes. To disable, specify: infinity
@@ -569,7 +576,12 @@
 		  %% Local c2s or remote s2s users cannot register accounts
 		  %%
 		  %%{access_from, deny},
-		  {access_from, register_from},
+		  
+		  %%
+          %% Restrict who can register new accounts on behalf other users (requires patch to mod_register)
+          %%
+		  {access_from, is_registrar},
+		  {ip_check_exempt, is_component},
 
 		  {access, register}
 		 ]},
