Waypoint commit of transition to ejabberd_xmlrpc
Since I learned that mod_admin_extra can be used to modify users' rosters, I decided to look into using that with ejabberd_xmlrpc rather than modifying ejabberd itself to automatically accept subscription requests. This looks like it's going to be much easier and won't require modifying the ejabberd source at all, which is great. This commit contains some work along the old path that I don't want to discard completely, but it will be removed soon.

--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -161,8 +161,13 @@
 			 http_poll,
 			 %%register,
 			 web_admin
-			]}
+			]},
 
+  %%
+  %% ejabberd_xmlrpc
+  %%
+
+  {4560, ejabberd_xmlrpc, []}
  ]}.
 
 %%
@@ -591,7 +596,8 @@
   {mod_stats,    []},
   {mod_time,     []},
   {mod_vcard,    []},
-  {mod_version,  []}
+  {mod_version,  []},
+  {mod_admin_extra, []}
  ]}.
 
 %%
