Basic proxybot message routing working w/ xmlrpc
Since mod_admin_extra lets ejabberdctl add and remove roster items, it seemed worth trying to switch to use ejabberd_xmlrpc for registering/unregistering users and adding/deleting roster items, rather than relying on in-band registration and hacky modifications to ejabberd itself. This seems to be working pretty well, and hopefully ejabberdctl can now serve all of our needs and we can limit the scope of changes we need to make to ejabberd.

The most basic proxybot functionality is now working - the bot gets created, logs in, and adds itself to each user's roster and pretends to be the other user. The bots then route messages between the users, so they can have the beginnings of a normal conversation.

--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -80,7 +80,6 @@
 			%% file and uncomment this line:
 			%%
 			%%{certfile, "/path/to/ssl.pem"}, starttls,
-
 			{access, c2s},
 			{shaper, c2s_shaper},
 			{max_stanza_size, 65536}
@@ -127,7 +126,14 @@
   %%
   %% ejabberd_xmlrpc
   %%
-  {4560, ejabberd_xmlrpc, []}
+  {4560, ejabberd_xmlrpc, [
+  			    {maxsessions, infinity},
+  			    {timeout, 5000},
+				{access_commands, [
+			    	{xmlrpc_hostbots, [register], []},
+			    	{xmlrpc_proxybots, [register, unregister, add_rosteritem, delete_rosteritem], []}
+				]}
+  ]}
  ]}.
 %%
 %% Allow or deny communication with specific servers.
@@ -187,7 +193,13 @@
 %%
 %% Local users: don't modify this line.
 %%
-{acl, local, {user_regexp, ""}}.r, "host", "bot.localhost"}}.
+{acl, local, {user_regexp, ""}}.
+
+%%
+%% Chatidea access control lists
+%%
+{acl, hostbot_user, {user, "host", "localhost"}}. % NOTE this does not also capture host@bot.localhost
+{acl, proxybot_users, {user_regexp, "^proxy"}}.
 
 
 %%%.   ============
@@ -236,6 +248,11 @@
 %% By default the frequency of account registrations from the same IP
 %% is limited to 1 account every 10 minutes. To disable, specify: infinity
 {registration_timeout, infinity}.
+%%
+%% Chatidea access rules
+%%
+{access, xmlrpc_hostbots, [{allow, admin}, {allow, hostbot_user}, {deny, all}]}.
+{access, xmlrpc_proxybots, [{allow, admin}, {allow, proxybot_users}, {deny, all}]}.
 
 
 %%%.   ================
@@ -288,6 +305,7 @@
   {mod_time,      []},
   {mod_vcard,     []},
   {mod_version,   []},
+  {mod_register, [{access, register}]}, %% let existing accounts change their passwords via in-band registration
   {mod_admin_extra, []}
  ]}.
 
