Work on proxybot message routing, chatstates, etc
- The proxybots are now a bit smarter about how they route messages between the users in a chat (which is currently only tested for two users, but should work with more).

- Chat `state notifications should now work between clients that support them, routed through the proxybots.

- The proxybots are now smarter about disconnecting themselves when not enough of their users are present, but I need to add some stuff with the mysql DB to them so that they can coordinate with the hostbot. (I should be able to bounce the proxybots automatically to try new python scripts simply by signing out and in to one of my user accounts in a client.)

--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -131,7 +131,7 @@
   			    {timeout, 5000},
 				{access_commands, [
 			    	{xmlrpc_hostbots, [register], []},
-			    	{xmlrpc_proxybots, [register, unregister, add_rosteritem, delete_rosteritem], []}
+			    	{xmlrpc_proxybots, [register, unregister, add_rosteritem, delete_rosteritem, user_sessions_info], []}
 				]}
   ]}
  ]}.
@@ -305,6 +305,7 @@
   {mod_time,      []},
   {mod_vcard,     []},
   {mod_version,   []},
+  %% {mod_multicast, []},
   {mod_register, [{access, register}]}, %% let existing accounts change their passwords via in-band registration
   {mod_admin_extra, []}
  ]}.
