--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -130,8 +130,8 @@
   			    {maxsessions, infinity},
   			    {timeout, 5000},
 				{access_commands, [
-			    	{xmlrpc_hostbots, [register], []},
-			    	{xmlrpc_proxybots, [register, unregister, add_rosteritem, delete_rosteritem, user_sessions_info], []}
+			    	{xmlrpc_hostbots, [register, unregister], []},
+			    	{xmlrpc_proxybots, [add_rosteritem, delete_rosteritem, user_sessions_info], []}
 				]}
   ]}
  ]}.
