--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -131,7 +131,8 @@
   			    {timeout, 5000},
 				{access_commands, [
 			    	{xmlrpc_hostbots, [register, unregister], []},
-			    	{xmlrpc_proxybots, [add_rosteritem, delete_rosteritem, user_sessions_info], []}
+			    	{xmlrpc_proxybots, [add_rosteritem, delete_rosteritem], []}
+			    	{xmlrpc_userinfobot, [user_sessions_info], []}
 				]}
   ]}
  ]}.
@@ -199,6 +200,7 @@
 %% Chatidea access control lists
 %%
 {acl, hostbot_user, {user, "host", "localhost"}}. % NOTE this does not also capture host@bot.localhost
+{acl, userinfobot_user, {user, "userinfo", "localhost"}}.
 {acl, proxybot_users, {user_regexp, "^proxy"}}.
 
 
@@ -253,6 +255,7 @@
 %%
 {access, xmlrpc_hostbots, [{allow, admin}, {allow, hostbot_user}, {deny, all}]}.
 {access, xmlrpc_proxybots, [{allow, admin}, {allow, proxybot_users}, {deny, all}]}.
+{access, xmlrpc_userinfobots, [{allow, admin}, {allow, userinfobot_user}, {deny, all}]}.
 
 
 %%%.   ================
