Move XMPRPC commands to User class from Proxybot
- Guests are now Observers.
- Since changes are made to both the proxybot and user rosters at the same time, it made sense to group those XMLRPC commands in a single function in the User object itself. Right now the Participants/Observers/Guests are associated tightly with a single proxybot, which I think will not change, so I don't think it's horrible to have the User objects perform these actions on behalf of the Proxybot.
- Also cleaned up who was performing the XMLRPC action in ejabberd.cfg.

--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -131,8 +131,7 @@
   			    {timeout, 5000},
 				{access_commands, [
 			    	{xmlrpc_hostbots, [register, unregister], []},
-			    	{xmlrpc_proxybots, [add_rosteritem, delete_rosteritem], []}
-			    	{xmlrpc_userinfobot, [user_sessions_info], []}
+			    	{xmlrpc_rosterbot, [add_rosteritem, delete_rosteritem, user_sessions_info], []}
 				]}
   ]}
  ]}.
@@ -200,8 +199,7 @@
 %% Chatidea access control lists
 %%
 {acl, hostbot_user, {user, "host", "localhost"}}. % NOTE this does not also capture host@bot.localhost
-{acl, userinfobot_user, {user, "userinfo", "localhost"}}.
-{acl, proxybot_users, {user_regexp, "^proxy"}}.
+{acl, rosterbot_user, {user, "rosterbot", "localhost"}}.
 
 
 %%%.   ============
@@ -254,8 +252,7 @@
 %% Chatidea access rules
 %%
 {access, xmlrpc_hostbots, [{allow, admin}, {allow, hostbot_user}, {deny, all}]}.
-{access, xmlrpc_proxybots, [{allow, admin}, {allow, proxybot_users}, {deny, all}]}.
-{access, xmlrpc_userinfobots, [{allow, admin}, {allow, userinfobot_user}, {deny, all}]}.
+{access, xmlrpc_rosterbot, [{allow, admin}, {allow, rosterbot_user}, {deny, all}]}.
 
 
 %%%.   ================
