Move all constants into file, update DB schema
No new functionality here, but lots of cleanup.

- Move all usernames, servers, passwords, and etc to the constants file. At some point I should use a proper configuration file with Python's configparser or a YAML library, but this was faster/easier for now.
- Change the passwords for the sake of regularly changing passwords, while I'm in here and it's easy.
- Rename users to make more sense, both in constants.py and in ejabberd.cfg.
- Consolidate the tables into a single database since I don't think it was worth the trouble of having two before, and update/reorganize the init_users.sql script to reflect current architecture.
- Remove init_xmpp_users.py. It was creating xmpp accounts for users that didn't have them already, but it's easier to just use xmlrpc to do this when the hostbot starts up.

--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -99,7 +99,7 @@
   %%
   {5237, ejabberd_service, [
   			    {hosts, ["bot.localhost"],
-  			     [{password, "yeij9bik9fard3ij4bai"}]
+  			     [{password, "is3joic8vorn8uf4ge4o"}]
   			    }
   ]},
   %%
@@ -124,7 +124,7 @@
   			    {maxsessions, infinity},
   			    {timeout, 5000},
 				{access_commands, [
-			    	{xmlrpc_hostbots, [register, unregister], []},
+			    	{xmlrpc_hostbot, [register, unregister], []},
 			    	{xmlrpc_rosterbot, [add_rosteritem, delete_rosteritem, user_sessions_info], []}
 				]}
   ]}
@@ -192,8 +192,8 @@
 %%
 %% Chatidea access control lists
 %%
-{acl, hostbot_user, {user, "host", "localhost"}}. % NOTE this does not also capture host@bot.localhost
-{acl, rosterbot_user, {user, "rosterbot", "localhost"}}.
+{acl, hostbot_user, {user, "_hostbot", "localhost"}}.
+{acl, rosterbot_user, {user, "_rosterbot", "localhost"}}.
 
 
 %%%.   ============
@@ -245,7 +245,7 @@
 %%
 %% Chatidea access rules
 %%
-{access, xmlrpc_hostbots, [{allow, admin}, {allow, hostbot_user}, {deny, all}]}.
+{access, xmlrpc_hostbot, [{allow, admin}, {allow, hostbot_user}, {deny, all}]}.
 {access, xmlrpc_rosterbot, [{allow, admin}, {allow, rosterbot_user}, {deny, all}]}.
 
 
