Only allow interactions between users and bots
	- Add the necessary access control lists and access rules so as to prevent users from interacting directly, since all interaction should happen through the proxybots. More detail about the corresponding ejabberd changes can be found here: https://github.com/lehrblogger/ejabberd/commit/de05f9f3499efab5380509ef0738ada9ec337fd4
	- Remove some unused rules.

--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -192,6 +192,8 @@
 %%
 %% Chatidea access control lists
 %%
+{acl, hostbot_component, {server, "bot.localhost"}}.
+{acl, proxybot_user, {user_regexp, "^proxybot_", "localhost"}}.
 {acl, hostbot_user, {user, "_hostbot", "localhost"}}.
 {acl, rosterbot_user, {user, "_rosterbot", "localhost"}}.
 
@@ -223,15 +225,6 @@
 %% Only admins can use the configuration interface:
 {access, configure, [{allow, admin}]}.
 %%
-%% Admins of this server are also admins of the MUC service:
-{access, muc_admin, [{allow, admin}]}.
-%%
-%% Only accounts of the local ejabberd server can create rooms:
-{access, muc_create, [{allow, local}]}.
-%%
-%% All users are allowed to use the MUC service:
-{access, muc, [{allow, all}]}.
-%%
 %% Only accounts on the local ejabberd server can create Pubsub nodes:
 {access, pubsub_createnode, [{allow, local}]}.
 %%
@@ -245,6 +238,7 @@
 %%
 %% Chatidea access rules
 %%
+{access, bots_only, [{allow, admin}, {allow, hostbot_component}, {allow, proxybot_user}, {deny, all}]}.
 {access, xmlrpc_hostbot, [{allow, admin}, {allow, hostbot_user}, {deny, all}]}.
 {access, xmlrpc_rosterbot, [{allow, admin}, {allow, rosterbot_user}, {deny, all}]}.
 
@@ -292,7 +286,7 @@
 		  {last_item_cache, false},
 		  {plugins, ["flat", "hometree", "pep"]}  % pep requires mod_caps
 		 ]},
-  {mod_roster,    []},
+  {mod_roster,    [{access, bots_only}]},
   %%{mod_service_log,[]},
   {mod_shared_roster,[]},
   {mod_stats,     []},
