--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -192,6 +192,7 @@
 %%
 %% Chatidea access control lists
 %%
+{acl, server_only, {user, "", "localhost"}}.
 {acl, hostbot_component, {server, "bot.localhost"}}.
 {acl, proxybot_user, {user_regexp, "^proxybot_", "localhost"}}.
 {acl, hostbot_user, {user, "_hostbot", "localhost"}}.
@@ -238,7 +239,7 @@
 %%
 %% Chatidea access rules
 %%
-{access, bots_only, [{allow, admin}, {allow, hostbot_component}, {allow, proxybot_user}, {deny, all}]}.
+{access, bots_only, [{allow, admin}, {allow, hostbot_component}, {allow, proxybot_user}, {allow, server_only}, {deny, all}]}.
 {access, xmlrpc_hostbot, [{allow, admin}, {allow, hostbot_user}, {deny, all}]}.
 {access, xmlrpc_rosterbot, [{allow, admin}, {allow, rosterbot_user}, {deny, all}]}.
 
