--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -125,6 +125,7 @@
   			    {timeout, 5000},
 				{access_commands, [
 			    	{xmlrpc_hostbot, [register, unregister], []},
+			    	{xmlrpc_proxybot, [unregister, add_rosteritem], []},
 			    	{xmlrpc_rosterbot, [add_rosteritem, delete_rosteritem, user_sessions_info], []}
 				]}
   ]}
@@ -194,8 +195,9 @@
 %%
 {acl, server_only, {user, "", "localhost"}}.
 {acl, hostbot_component, {server, "bot.localhost"}}.
-{acl, proxybot_user, {user_regexp, "^proxybot_", "localhost"}}.
+{acl, proxybot_regex, {user_regexp, "^proxybot_", "localhost"}}.
 {acl, hostbot_user, {user, "_hostbot", "localhost"}}.
+{acl, proxybot_user, {user, "_proxybot", "localhost"}}.
 {acl, rosterbot_user, {user, "_rosterbot", "localhost"}}.
 
 
@@ -239,8 +241,9 @@
 %%
 %% Chatidea access rules
 %%
-{access, bots_only, [{allow, admin}, {allow, hostbot_component}, {allow, proxybot_user}, {allow, server_only}, {deny, all}]}.
+{access, bots_only, [{allow, admin}, {allow, hostbot_component}, {allow, proxybot_regex}, {allow, server_only}, {deny, all}]}.
 {access, xmlrpc_hostbot, [{allow, admin}, {allow, hostbot_user}, {deny, all}]}.
+{access, xmlrpc_proxybot, [{allow, admin}, {allow, proxybot_user}, {deny, all}]}.
 {access, xmlrpc_rosterbot, [{allow, admin}, {allow, rosterbot_user}, {deny, all}]}.
 
 
