Add flag for hostbot to restore dead proxybots
	- Starting up the hostbot with --restore will now tell it to find all idle and active proxybots in the database that are not currently online, and it will start them up with their previous state using their --bounced flag.
	- Remove unused hostbot script arguments.

--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -124,7 +124,7 @@
   			    {maxsessions, infinity},
   			    {timeout, 5000},
 				{access_commands, [
-			    	{xmlrpc_hostbot, [register, unregister], []},
+			    	{xmlrpc_hostbot, [register, unregister, user_sessions_info], []},
 			    	{xmlrpc_proxybot, [unregister, add_rosteritem], []},
 			    	{xmlrpc_rosterbot, [add_rosteritem, delete_rosteritem, user_sessions_info], []}
 				]}
