Switching out localhost for vine.im

--- a/scripts/config_dev/ejabberd.cfg
+++ b/scripts/config_dev/ejabberd.cfg
@@ -50,7 +50,7 @@
 %% You can define one or several, for example:
 %% {hosts, ["example.net", "example.com", "example.org"]}.
 %%
-{hosts, ["localhost"]}.
+{hosts, ["vine.im"]}.
 %%
 %% route_subdomains: Delegate subdomains to other XMPP servers.
 %% For example, if this ejabberd serves example.org and you want
@@ -98,7 +98,7 @@
   %% ejabberd_service: Interact with external components (transports, ...)
   %%
   {5237, ejabberd_service, [
-  			    {hosts, ["bot.localhost"],
+  			    {hosts, ["bot.vine.im"],
   			     [{password, "is3joic8vorn8uf4ge4o"}]
   			    }
   ]},
@@ -179,8 +179,8 @@
 %% The 'admin' ACL grants administrative privileges to XMPP accounts.
 %% You can put here as many accounts as you want.
 %%
-{acl, admin, {user, "admin1", "localhost"}}.
-{acl, admin, {user, "admin2", "localhost"}}.
+{acl, admin, {user, "admin1", "vine.im"}}.
+{acl, admin, {user, "admin2", "vine.im"}}.
 %%
 %% Blocked users
 %%
@@ -194,12 +194,12 @@
 %%
 %% Chatidea access control lists
 %%
-{acl, server_only, {user, "", "localhost"}}.
-{acl, hostbot_component, {server, "bot.localhost"}}.
-{acl, proxybot_regex, {user_regexp, "^proxybot_", "localhost"}}.
-{acl, hostbot_user, {user, "_hostbot", "localhost"}}.
-{acl, proxybot_user, {user, "_proxybot", "localhost"}}.
-{acl, rosterbot_user, {user, "_rosterbot", "localhost"}}.
+{acl, server_only, {user, "", "vine.im"}}.
+{acl, hostbot_component, {server, "bot.vine.im"}}.
+{acl, proxybot_regex, {user_regexp, "^proxybot_", "vine.im"}}.
+{acl, hostbot_user, {user, "_hostbot", "vine.im"}}.
+{acl, proxybot_user, {user, "_proxybot", "vine.im"}}.
+{acl, rosterbot_user, {user, "_rosterbot", "vine.im"}}.
 
 %%%.   ============
 %%%'   ACCESS RULES
@@ -268,7 +268,7 @@
   {mod_caps,      []},
   {mod_configure, []}, % requires mod_adhoc
   {mod_disco,     []},
-  %%{mod_echo,    [{host, "echo.localhost"}]},
+  %%{mod_echo,    [{host, "echo.vine.im"}]},
   {mod_irc,       []},
   {mod_http_bind, []},
   %%{mod_http_fileserver, [
