Initial work on leaf-based architecture refactor
	This is the first step away from the proxybot client architecture. Instead, I'm going to have one or more "leaf" components that handle all of the messages and other info from the users, and simply pretend to be the appropriate proxybot. The leaves themselves will be stateless, and will query all needed data from MySQL, which will eventually have a cacheing layer.

	So far I have the basic component working with updated database and XMLRPC permissions, as well as the skeleton of the message event handler. There's a lot to do, but I need to think about how admin commands should work, and want to get something in the repo.

--- a/scripts/config_dev/ejabberd.cfg
+++ b/scripts/config_dev/ejabberd.cfg
@@ -98,8 +98,8 @@
   %% ejabberd_service: Interact with external components (transports, ...)
   %%
   {5237, ejabberd_service, [
-  			    {hosts, ["bot.vine.im"],
-  			     [{password, "is3joic8vorn8uf4ge4o"}]
+  			    {hosts, ["leaf0.vine.im", "leaf1.vine.im"],
+			    	[{password, "is3joic8vorn8uf4ge4o"}]
   			    }
   ]},
   %%
@@ -124,9 +124,7 @@
   			    {maxsessions, infinity},
   			    {timeout, 5000},
 				{access_commands, [
-			    	{xmlrpc_hostbot, [register, unregister, user_sessions_info], []},
-			    	{xmlrpc_proxybot, [unregister, add_rosteritem], []},
-			    	{xmlrpc_rosterbot, [add_rosteritem, delete_rosteritem, user_sessions_info], []}
+			    	{xmlrpc_leaves, [register, unregister, get_roster, add_rosteritem, delete_rosteritem, user_sessions_info], []}
 				]}
   ]}
  ]}.
@@ -195,11 +193,8 @@
 %% Chatidea access control lists
 %%
 {acl, server_only, {user, "", "vine.im"}}.
-{acl, hostbot_component, {server, "bot.vine.im"}}.
-{acl, proxybot_regex, {user_regexp, "^proxybot_", "vine.im"}}.
-{acl, hostbot_user, {user, "_hostbot", "vine.im"}}.
-{acl, proxybot_user, {user, "_proxybot", "vine.im"}}.
-{acl, rosterbot_user, {user, "_rosterbot", "vine.im"}}.
+{acl, leaf_components, {server_regexp, "^leaf[0-1].vine.im$"}}.
+{acl, leaf_users, {user_regexp, "^_leaf[0-1]$", "vine.im"}}.
 
 %%%.   ============
 %%%'   ACCESS RULES
@@ -241,10 +236,8 @@
 %%
 %% Chatidea access rules
 %%
-{access, bots_only, [{allow, admin}, {allow, hostbot_component}, {allow, proxybot_regex}, {allow, server_only}, {deny, all}]}.
-{access, xmlrpc_hostbot, [{allow, admin}, {allow, hostbot_user}, {deny, all}]}.
-{access, xmlrpc_proxybot, [{allow, admin}, {allow, proxybot_user}, {deny, all}]}.
-{access, xmlrpc_rosterbot, [{allow, admin}, {allow, rosterbot_user}, {deny, all}]}.
+{access, bots_only, [{allow, admin}, {allow, leaf_components}, {allow, server_only}, {deny, all}]}.
+{access, xmlrpc_leaves, [{allow, admin}, {allow, leaf_users}, {deny, all}]}.
 
 
 %%%.   ================
