Add more vinebot stuff, figure out presence issues
	- There was a really annoying issue where iChat was automatically receiving unsubscribed from the server, and then assuming the contact was unauthorized. After talking with Lance, it seems like the issue was with SleekXMPP's default presence_probe handler and how it interacted with the roster.
	- There was a somewhat less annoying issue where contacts were not appearing as online, and the component wasn't properly sending a directed presence. Again after talking with Lance, it seemed like the built-in sendPresence method wasn't working right, so I'm constructing the stanza manually.
	- Added some logic to the presence_unavailable event, depending on the state.
	- Moved dev work to dev.vine.im, so I can continue to use the prod version while I work.
	- Other stuff I'm forgetting... there's a lot to add still though.

--- a/scripts/config_dev/ejabberd.cfg
+++ b/scripts/config_dev/ejabberd.cfg
@@ -50,7 +50,7 @@
 %% You can define one or several, for example:
 %% {hosts, ["example.net", "example.com", "example.org"]}.
 %%
-{hosts, ["vine.im"]}.
+{hosts, ["dev.vine.im"]}.
 %%
 %% route_subdomains: Delegate subdomains to other XMPP servers.
 %% For example, if this ejabberd serves example.org and you want
@@ -98,7 +98,7 @@
   %% ejabberd_service: Interact with external components (transports, ...)
   %%
   {5237, ejabberd_service, [
-  			    {hosts, ["leaf0.vine.im", "leaf1.vine.im"],
+  			    {hosts, ["leaf0.dev.vine.im", "leaf1.dev.vine.im"],
 			    	[{password, "is3joic8vorn8uf4ge4o"}]
   			    }
   ]},
@@ -177,8 +177,8 @@
 %% The 'admin' ACL grants administrative privileges to XMPP accounts.
 %% You can put here as many accounts as you want.
 %%
-{acl, admin, {user, "admin1", "vine.im"}}.
-{acl, admin, {user, "admin2", "vine.im"}}.
+{acl, admin, {user, "admin1", "dev.vine.im"}}.
+{acl, admin, {user, "admin2", "dev.vine.im"}}.
 %%
 %% Blocked users
 %%
@@ -192,9 +192,9 @@
 %%
 %% Chatidea access control lists
 %%
-{acl, server_only, {user, "", "vine.im"}}.
-{acl, leaf_components, {server_regexp, "^leaf[0-1].vine.im$"}}.
-{acl, leaf_users, {user_regexp, "^_leaf[0-1]$", "vine.im"}}.
+{acl, server_only, {user, "", "dev.vine.im"}}.
+{acl, leaf_components, {server_regexp, "^leaf[0-1].dev.vine.im$"}}.
+{acl, leaf_users, {user_regexp, "^_leaf[0-1]$", "dev.vine.im"}}.
 
 %%%.   ============
 %%%'   ACCESS RULES
@@ -261,7 +261,7 @@
   {mod_caps,      []},
   {mod_configure, []}, % requires mod_adhoc
   {mod_disco,     []},
-  %%{mod_echo,    [{host, "echo.vine.im"}]},
+  %%{mod_echo,    [{host, "echo.dev.vine.im"}]},
   {mod_irc,       []},
   {mod_http_bind, []},
   %%{mod_http_fileserver, [
