--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "scripts/config"]
-	path = scripts/config
-	url = git@github.com:lehrblogger/chatidea-config.git
+[submodule "scripts/shared"]
+	path = scripts/shared
+	url = git@github.com:lehrblogger/vine-shared.git
