Move scripts and submodule to top-level directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "scripts/shared"]
-	path = scripts/shared
+[submodule "shared"]
+	path = shared
 	url = git@github.com:lehrblogger/vine-shared.git
